# setuptools-download

./: .pre-commit-config.yaml  README.md  requirements-dev.txt  setup.cfg  setuptools_download.py  tox.ini
.github/workflows/: main.yml
tests/: setuptools_download_test.py
