[metadata]
name = setuptools_download
version = 1.1.0
description = setuptools plugin to download external files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/setuptools-download
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = setuptools_download
install_requires =
    setuptools>=46.1.0
python_requires = >=3.9

[options.entry_points]
distutils.commands =
    setuptools_download = setuptools_download:setuptools_download
    install_setuptools_download = setuptools_download:install_setuptools_download
setuptools.finalize_distribution_options =
    setuptools_download = setuptools_download:finalize_distribution

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
parallel = True
source = $PWD
data_file = $PWD/.coverage

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
